# event-tracker-v2

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: auth.py  events.py  interests.py  routes.py  users.py
app/constants/: constants.py
app/core/: auth.py  db.py  middleware.py
app/model/: api.py  llm.py
app/services/: email_sync.py  event_service.py  google_api.py  google_calendar.py  google_oauth.py  interest_service.py  llm_client.py  ml_utils.py  queue.py  user_service.py
prisma/: schema.prisma
prisma/migrations/20250916152115_init/: migration.sql
prisma/migrations/20250918084336_update_schema/: migration.sql
prisma/migrations/20250918123810_add_google_account/: migration.sql
prisma/migrations/20250918123843_remove_googleid/: migration.sql
prisma/migrations/20250918124232_add_google_id_again/: migration.sql
prisma/migrations/20251019112742_add_last_processed_message_id/: migration.sql
scripts/: migrate.bat  migrate.sh  seed_interests.py
