[project]
name = "event-tracker-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.116.1",
    "prisma>=0.15.0",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
    "aiohttp",
    "authlib>=1.3.2",
    "httpx>=0.27.2",
    "itsdangerous>=2.2.0",
    "spacy>=3.7.0",
    "sentence-transformers>=2.2.0",
    "dateparser>=1.2.0",
    "google-generativeai>=0.8.0",  # Replaced groq with google-generativeai
    "pydantic>=2.5.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
    "regex>=2023.10.0",
    "typing-extensions>=4.8.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
]
