[project]
name = "event-tracker-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.116.1",
    "prisma>=0.15.0",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
    "google-generativeai>=0.8.0",  
    "pydantic>=2.5.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]